fix issue with style overlapping with other thing

--- a/stylus-dark.user.css
+++ b/stylus-dark.user.css
@@ -11,7 +11,7 @@
 ==/UserStyle== */
 @-moz-document regexp("chrome-extension://.*"),
 regexp("moz-extension://.*") {
-  #options,
+  body#stylus-options #options,
   #notes,
   body {
     background: #38383d!important;
